--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,6 +13,11 @@
     粉丝
 </a> </div>
 
+<%= form_for(@micropost) do |f| %>
+  <%= f.text_area :content, placeholder: "Compose new micropost..." %>
+  <%= f.submit "Post" %>
+<% end %>
+
 <ul>
   <% @users.each do |user| %>
     <li>
@@ -32,4 +37,34 @@
   <% end %>
 </ul>
 
+<div class="list">
+  <% if current_user.microposts.any? %>
+    <h3>Microposts (<%= current_user.microposts.count %>)</h3>
+    <ol class="microposts">
+      <% current_user.microposts.each do |micropost|%>
+        <li>
+          <%= micropost.content%>
+          <% if micropost.user == current_user %>
+            <%= link_to "delete", micropost, method: :delete, data: { confirm: "You sure?" },title: micropost.content %>
+          <% end %>
+        </li>
+      <% end %>
+    </ol>
+  <% end %>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <%= link_to "退出", destroy_user_session_path, method: :delete%>
+
+<style type="text/css">
+  .list {
+    float: right;
+  }
+</style>
