--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,17 +1,6 @@
 <%= current_user.email %>
-<div class="stats">
-  <a href="<%= following_user_path(current_user) %>">
-    <strong id="following" class="stat">
-      <%= current_user.followed_users.count %>
-    </strong>
-    关注
-  </a>
-  <a href="<%= followers_user_path(current_user) %>">
-    <strong id="followers" class="stat">
-      <%= current_user.followers.count %>
-    </strong>
-    粉丝
-</a> </div>
+
+<%= render "stats" %>
 
 <%= form_for(@micropost) do |f| %>
   <%= f.text_area :content, placeholder: "Compose new micropost..." %>
@@ -22,17 +11,13 @@
   <% @users.each do |user| %>
     <li>
       <span><%= user.email%></span>
-      <% if current_user.following?(user) %>
-        <%= form_for(current_user.relationships.find_by(followed_id: user),
-                   html: { method: :delete }) do |f| %>
-          <%= f.submit "Unfollow", class: "btn btn-large" %>
+      <div id="follow_form">
+        <% if current_user.following?(user) %>
+          <%= render partial: "users/unfollow", locals: {user: user}%>
+        <% else %>
+          <%= render partial: "users/follow", locals: {user: user} %>
         <% end %>
-      <% else %>
-        <%= form_for(current_user.relationships.build(followed_id: user.id)) do |f| %>
-          <div><%= f.hidden_field :followed_id %></div>
-          <%= f.submit "Follow", class: "btn btn-large btn-primary" %>
-        <% end %>
-      <% end %>
+      </div>
     </li>
   <% end %>
 </ul>
